# data_check

./: .drone.arm64.yml  .drone.jsonnet  .drone.yml  .gitignore  .pre-commit-config.yaml  .vulture_whitelist.py  404.html  CHANGELOG.md  LICENSE  README.md  data_check.yml  index.html  mkdocs.yml  mkdrone.sh  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-int-tests.yml  ci-pr-databases.yml  ci-pr.yml  ci-push.yml  tox.yml  unit-tests.yml
checks/: template.yml
checks/basic/: data_types.sql  decimal_varchar.csv  decimal_varchar.sql  mixed_dates.csv  mixed_dates.sql  simple_string.sql  sorted_set.sql  unicode_column.csv  unicode_string.sql
checks/empty_sets/basic/: empty_query.sql
checks/excel/basic/: data_types.sql  data_types.xlsx  simple_excel.xlsx
checks/excel/failing/: failing_excel.sql  failing_excel.xlsx
checks/failing/: expected_to_fail.sql  invalid_csv.sql
checks/pipelines/always_run_in_between/: data_check_pipeline.yml
checks/pipelines/date_test/: create_table.sql  data_check_pipeline.yml
checks/pipelines/simple_pipeline/: data_check_pipeline.yml
checks/templates/: binding.csv  binding.sql  template1.sql
csv_checks/: index.html
data_check/: __init__.py  __main__.py  config.py  data_check.py  data_check_exception.py  data_check_io.py  data_check_output.py  data_check_sql.py  date.py  exceptions.py  file_ops.py  generator.py  io.py  output.py  result.py  runner.py  sql.py
data_check/checks/: __init__.py  base_check.py  csv_check.py  empty_set_check.py  excel_check.py  generator.py  path_not_exists.py  pipeline_check.py  sql_base_check.py  table_check.py
data_check/checks/pipeline_check/: __init__.py  cmd_step.py  pipeline_check.py  pipeline_model.py  serial_pipeline_steps.py
data_check/cli/: append.py  commands.py  common.py  fake.py  generate.py  init.py  load.py  main.py  params.py  ping.py  run.py  sql.py
data_check/fake/: column_config.py  fake_config.py  fake_data.py  fake_iterator.py
data_check/fake/iterators/: __init__.py  dec.py  inc.py  random.py
data_check/output/: __init__.py  diffed_df.py  handler.py  output.py  result_formatter.py
data_check/sql/: __init__.py  load_mode.py  query_result.py  sql.py  table.py  table_info.py  table_loader.py  tools.py
data_check/sql/dialect/: __init__.py  databricks.py  duckdb.py  mssql.py  mysql.py  oracle.py  postgresql.py  sqlite.py
data_check/test_type/: pipeline_check.py  simple_check.py
data_check/utils/: deprecation.py  lookup_loader.py  scaffold.py
data_check/utils/scaffold_templates/: data_check.yml  data_check_pipeline.yml
databases/: index.html
dependencies/: requirements-dev.txt  requirements-mssql.txt  requirements-mysql.txt  requirements-oracle.txt  requirements-postgres.txt
development/: index.html
docs/: csv_checks.md  databases.md  development.md  example.md  howtos.md  index.md  install.md  loading_data.md  pipelines.md  running_sql.md  sql.md  test_data.md  usage.md
example/: data_check.yml  index.html
example/checks/: template.yml
example/checks/basic/: data_types.csv  decimal_varchar.csv  duplicates.csv  float.sql  leading_zeros.sql  unicode_column.sql  unicode_string.csv
example/checks/failing/: diff.csv  diff.sql  duplicates.sql  expected_to_fail.csv  invalid.csv  invalid.sql  invalid_csv.sql  non_unicode.csv  non_unicode.sql  non_unique_columns.csv  non_unique_columns.sql
example/checks/templates/: binding.sql  template1.csv
example/extra/breakpoint/: data_check_pipeline.yml
example/failing/run_sql/: invalid.sql
example/fake/: minimal_config.yml  simple_table.yml
example/load_data/: test_date.xlsx  test_date_huge.csv  test_decimals.xlsx
example/load_data/sample/: large_number_test.csv  test_date_with_null_dates.csv  test_date_with_only_null_dates.csv  test_date_with_only_null_dates_and_missing_column.csv
example/lookups/: b1.sql
example/run_sql/: create.sql
howtos/: index.html
install/: index.html
int_test/: run_all.sh  stop_all.sh  teardown.sh
int_test/cli/: test_cli.py
int_test/mssql/: Dockerfile  data_check.yml  docker-compose.yml  int_test.sh
int_test/mssql/checks/: template.yml
int_test/mssql/load_data/: test_decimals.csv
int_test/mssql/prepare/: create_schema.sql
int_test/mysql/: Dockerfile  data_check.yml  docker-compose.yml  int_test.sh
int_test/mysql/checks/: template.yml
int_test/mysql/prepare/: create_schema.sql
int_test/oracle/: Dockerfile  data_check.yml  docker-compose.yml  int_test.sh
int_test/oracle/checks/: template.yml
int_test/oracle/prepare/: create_schema.sql
int_test/oracle/run_sql/: run_test.sql
int_test/postgres/: Dockerfile  data_check.yml  docker-compose.yml  int_test.sh
int_test/postgres/checks/: template.yml
int_test/postgres/load_data/: test_decimals.csv
int_test/postgres/prepare/: create_schema.sql
int_test/python/: test_python.sh
int_test/python/3.6/: Dockerfile
int_test/python/3.7/: Dockerfile
int_test/scripts/: run_tests.sh
load_data/: test.csv  test.xlsx  test_date.csv  test_date_huge.xlsx  test_datetime.xlsx
load_data/tables/: temp.test2.csv
loading_data/: index.html
lookups/sub_lkp/: b2.sql
pipelines/: index.html
run_sql/: create.sql  run_t2.sql  run_test.sql
scripts/: run_int_test.sh
search/: search_index.json
sql/: index.html
test/: conftest.py  test_cli.py  test_config.py  test_data_check.py  test_database.py  test_generator.py  test_io.py  test_load.py  test_pipeline.py  test_sql.py  test_sql_tools.py
test/core/: test_config.py  test_data_check.py  test_date.py  test_deprecation.py  test_docs.py  test_empty_set_check.py  test_excel.py  test_generator.py  test_io.py  test_load.py  test_output.py  test_pipeline.py  test_runner.py  test_sql.py  test_table.py  test_table_check.py  test_table_info.py  test_write_check.py
test/database/: test_database.py  test_load_csv.py  test_load_file.py  test_run.py  test_upsert.py
test/fake/: test_fake.py
test/int_test/: test_int_tests.py
test_data/: index.html
usage/: index.html
(+139 files in other folders)
