[tool.poetry]
name = "data_check"
version = "0.14.0"
description = "simple data validation"
authors = ["Andreas Rjasanow <andrjas@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://andrjas.github.io/data_check/"
repository = "https://github.com/andrjas/data_check"
keywords = ["data", "validation", "testing", "quality"]
classifiers = [
        "Development Status :: 3 - Alpha",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "Intended Audience :: Other Audience",
        "Intended Audience :: Science/Research",
        "Topic :: Database",
        "Topic :: Software Development",
        "Topic :: Software Development :: Testing",
    ]
include = ["CHANGELOG.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
SQLAlchemy = "1.4.46"
pandas = "1.5.3"
pyyaml = "6.0"
numpy = "1.24.2"
click = "8.1.3"
colorama = "0.4.6"
Jinja2 = "3.1.2"

psycopg2-binary = { version = "2.9.5", optional = true }
cx_Oracle = { version = "8.3.0", optional = true}
pymysql = {version = "1.0.2", optional = true, extras = ["rsa"] }
pyodbc = {version = "4.0.35", optional = true}
python-dateutil = "2.8.2"
openpyxl = "3.1.1"
click-default-group = "1.2.2"
Faker = "17.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-parallel = "^0.1.0"
coverage = "^7"

[tool.poetry.scripts]
data_check = "data_check.cli.main:cli"

[tool.poetry.extras]
postgres = ["psycopg2-binary"]
oracle = ["cx_Oracle"]
mysql = ["pymysql"]
mssql = ["pyodbc"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::FutureWarning",
]

[tool.vulture]
paths = ["data_check", ".vulture_whitelist.py"]

[tool.mypy]
files = ["data_check/", "test/"]
